--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,14 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.4",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "symfony/dom-crawler": "^5.1",
+        "ext-dom": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
